@@ -1,0 +1,14 @@
+# This file is auto-generated by 'make config'.
+# Options for rrdtool-1.4.8_9
+_OPTIONS_READ=rrdtool-1.4.8_9
+_FILE_COMPLETE_OPTIONS_LIST=DEJAVU DOCS EXAMPLES GRAPH JSON MMAP NLS PERL_MODULE PYTHON_MODULE RUBY_MODULE
+OPTIONS_FILE_UNSET+=DEJAVU
+OPTIONS_FILE_UNSET+=DOCS
+OPTIONS_FILE_UNSET+=EXAMPLES
+OPTIONS_FILE_SET+=GRAPH
+OPTIONS_FILE_SET+=JSON
+OPTIONS_FILE_SET+=MMAP
+OPTIONS_FILE_SET+=NLS
+OPTIONS_FILE_SET+=PERL_MODULE
+OPTIONS_FILE_SET+=PYTHON_MODULE
+OPTIONS_FILE_UNSET+=RUBY_MODULE
