@@ -1,0 +1,8 @@
+# This file is auto-generated by 'make config'.
+# Options for cairo-1.14.2,2
+_OPTIONS_READ=cairo-1.14.2,2
+_FILE_COMPLETE_OPTIONS_LIST=GLIB OPENGL X11 XCB
+OPTIONS_FILE_SET+=GLIB
+OPTIONS_FILE_UNSET+=OPENGL
+OPTIONS_FILE_UNSET+=X11
+OPTIONS_FILE_UNSET+=XCB
